--- a/index03.html
+++ b/index03.html
@@ -17,7 +17,7 @@
 
 <style>
   body{
-    background-image: url("/starter-code/assets/crew/background-crew-mobile.jpg");
+    background-image: url("/starter-code/assets/technology/background-technology-mobile.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -46,7 +46,7 @@
             <a href="index.html"><li>00 Home</li></a>
             <a href="index01.html"><li>01 Destination</li></a>
             <a href="index02.html"><li>02 Crew</li></a>
-            <a href="index03.html"><li>03 Technology</li></a>
+            <a href="#"><li>03 Technology</li></a>
 
 
           </ul>
@@ -60,27 +60,25 @@
 <div class="two-divs-02">
 
     <div class="content-01">
-      <h1 class="heading-01"> <span class="num1" >02</span> Meet your crew</h1>
-      <img class="img-02" src="" alt="imgg">
+      <h1 class="heading-01"> <span class="num1" >03</span> Space launch 101</h1>
+      <img class="img-03" src="" alt="imgg">
     
     </div>
-    <hr class="hr-02">
+  
 
 <div class="info">
   <ul class="nav-02" >
-    <li class=" dot one"> <span  href="#"></span> </li>
-    <li class=" dot two"> <span  href="#"></span> </li>
-    <li class=" dot three"> <span  href="#"></span> </li>
-    <li class=" dot four"> <span  href="#"></span> </li>
+    <li class=" dot-one one"> <span class="number"  href="#">1</span> </li>
+    <li class=" dot-two two"> <span class="number"   href="#">2</span> </li>
+    <li class=" dot-three three"> <span class="number"  href="#">3</span> </li>
   </ul>
 
-<div class="text-02">
-  <h2 class="heading-02-02"></h2>
-  <p class="p-02-02"></p>
+<div class="text-03">
+  <p class="tech-p"> The terminology...</p>
+  <p class="tech-p1"></p>
+  <p class="tech-p2"></p>
    
-  <div class="stats-grid"> 
-    <p class="stats-p-02-02"> </p>
-</div>
+
 </div>
 
 
@@ -99,6 +97,6 @@
  
   </div>
   </main>
-<script type="module" src="crew.js"></script>
+<script type="module" src="tech.js"></script>
 </body>
 </html>
