--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="index.html"><li>00 Home</li></a>
             <a href="index01.html"><li>01 Destination</li></a>
             <a href="index02.html"><li>02 Crew</li></a>
-            <a href="#"><li>03 Technology</li></a>
+            <a href="index03.html"><li>03 Technology</li></a>
 
           </ul>
         </div>
