--- a/index01.html
+++ b/index01.html
@@ -14,7 +14,8 @@
 
   <title>Destination</title>
 
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="anime.min.js"></script>
 <style>
   body{
     background-image: url("/starter-code/assets/destination/background-destination-mobile.jpg");
@@ -102,6 +103,7 @@
  
   </div>
   </main>
+  
 <script type="module" src="app.js"></script>
 </body>
 </html>
