--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div class="circle-box">
 <div class="circle">
-  <h3>Explore</h3>
+  <h3> <a class="circle-text" href="index01.html">Explore</a> </h3>
 </div>
     </div>
   </div>
