--- a/index.html
+++ b/index.html
@@ -28,8 +28,18 @@
   <main class="conatiner">
     <nav>
       <div>  <img src="/starter-code/assets/shared/logo.svg" alt="logo"></div>
+
+      <div class="desktop-nav">
+        <ul class="desktop-menu">
+          <a href="index.html"><li> Home</li></a>
+          <a href="index01.html"><li> Destination</li></a>
+          <a href="index02.html"><li> Crew</li></a>
+          <a href="index03.html"><li> Technology</li></a>
+
+        </ul>
+      </div>
     
-      <div> 
+      <div class="mobile-nav"> 
 
 
         <div id="menuToggle">
