--- a/index01.html
+++ b/index01.html
@@ -15,7 +15,7 @@
   <title>Destination</title>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="anime.min.js"></script>
+  <!-- <script src="anime.min.js"></script> -->
 <style>
   body{
     background-image: url("/starter-code/assets/destination/background-destination-mobile.jpg");
@@ -31,7 +31,18 @@
     <nav>
       <div>  <img src="./starter-code/assets/shared/logo.svg" alt="logo"></div>
     
-      <div> 
+
+      <div class="desktop-nav">
+        <ul class="desktop-menu">
+          <a href="index.html"><li> Home</li></a>
+          <a href="index01.html"><li> Destination</li></a>
+          <a href="index02.html"><li> Crew</li></a>
+          <a href="index03.html"><li> Technology</li></a>
+
+        </ul>
+      </div>
+
+      <div  class="mobile-nav"> 
 
 
         <div id="menuToggle">
