--- a/index02.html
+++ b/index02.html
@@ -21,6 +21,13 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
+  @media (width:768px) {
+      body{
+      background-image: url("/starter-code/assets/crew/background-crew-tablet.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+  }
 </style>
 
 </head>
