--- a/index03.html
+++ b/index03.html
@@ -21,6 +21,15 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  @media (width:768px) {
+      body{
+      background-image: url("/starter-code/assets/technology/background-technology-tablet.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+  }
+
 </style>
 
 </head>
@@ -76,7 +85,7 @@
     </div>
   
 
-<div class="info">
+<div class="info-3">
   <ul class="nav-02" >
     <li class=" dot-one one"> <span class="number"  href="#">1</span> </li>
     <li class=" dot-two two"> <span class="number"   href="#">2</span> </li>
