--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     background-repeat: no-repeat;
     background-size: cover;
     }
+
+    @media (width:768px) {
+      body{
+      background-image: url("/starter-code/assets/home/background-home-tablet.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+  }
   </style>
 
 </head>
