--- a/index01.html
+++ b/index01.html
@@ -22,6 +22,13 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
+  @media (width:768px) {
+      body{
+      background-image: url("/starter-code/assets/destination/background-destination-tablet.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+  }
 </style>
 
 </head>
