--- a/index02.html
+++ b/index02.html
@@ -6,11 +6,11 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
 
-<link rel="stylesheet" href="styles.css">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500&family=Bellefair&display=swap" rel="stylesheet">
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500&family=Bellefair&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 
   <title>Destination</title>
 
@@ -28,6 +28,14 @@
     background-size: cover;
     }
   }
+
+  @media (min-width:1024px) {
+      body{
+      background-image: url("/starter-code/assets/crew/background-crew-desktop.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+  }
 </style>
 
 </head>
@@ -40,10 +48,10 @@
 
       <div class="desktop-nav">
         <ul class="desktop-menu">
-          <a href="index.html"><li> Home</li></a>
-          <a href="index01.html"><li> Destination</li></a>
-          <a href="index02.html"><li> Crew</li></a>
-          <a href="index03.html"><li> Technology</li></a>
+          <li> <a class="li-01-01 " href="index.html"><span class="desktop-num">00</span> Home</a></li>
+          <li> <a class="li-01-01 " href="index01.html"> <span class="desktop-num">01</span> Destination</a></li>
+          <li> <a class="li-01-01 " href="index02.html"><span class="desktop-num">02</span> Crew</a></li>
+          <li> <a class="li-01-01 " href="index03.html"><span class="desktop-num">03</span> Technology</a></li>
 
         </ul>
       </div>
@@ -74,7 +82,7 @@
       </div>
      
     </nav>
-    <h1 class="desktop-heading-02"> <span class="num1" >02</span> Meet your crew</h1>
+    <!-- <h1 class="desktop-heading-02"> <span class="num1" >02</span> Meet your crew</h1> -->
 <div class="two-divs-02-02">
   <!-- <h1 class="desktop-heading-02"> <span class="num1" >02</span> Meet your crew</h1> -->
     <div class="content-02">
