--- a/index03.html
+++ b/index03.html
@@ -70,10 +70,10 @@
           
   
           <ul id="menu">
-            <a href="index.html"><li>00 Home</li></a>
-            <a href="index01.html"><li>01 Destination</li></a>
-            <a href="index02.html"><li>02 Crew</li></a>
-            <a href="#"><li>03 Technology</li></a>
+            <li><a href="index.html"><li>    00 Home</li></a></li>    
+            <li><a href="index01.html"><li>  01 Destination</li></a></li>    
+            <li><a href="index02.html"><li>  02 Crew</li></a></li>    
+            <li><a href="index03.html"><li>  03 Technology</li></a></li>  
 
 
           </ul>
